# Resizinator

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
nginx/: Dockerfile  default.conf
resizinator/: manage.py  pytest.ini
resizinator/api_docs/: image.md  user.md
resizinator/image/: models.py  serializers.py  tasks.py  urls.py  views.py
resizinator/image/migrations/: 0001_initial.py  0001_initial_squashed_0002_alter_image_medium_alter_image_original_and_more.py
resizinator/image/tests/functional/: test_image.py
resizinator/image/tests/unit/: test_tasks.py
resizinator/resizinator/: asgi.py  celery.py  settings.py  storage_backends.py  test_settings.py  urls.py  wsgi.py
resizinator/user/: urls.py  views.py
resizinator/user/tests/functional/: test_user.py
