[tool.poetry]
name = "resizinator"
version = "0.1.0"
description = ""
authors = ["Vasanth <vasanthn7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
djangorestframework = "^3.15.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
