[tool.poetry]
name = "resizinator"
version = "0.1.0"
description = ""
authors = ["Vasanth <vasanthn7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
djangorestframework = "^3.15.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pytest = "^8.2.0"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ruff = "^0.4.4"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
